--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <!-- Artifact Information  -->
   <groupId>org.jboss.arquillian.daemon</groupId>
   <artifactId>arquillian-daemon-parent</artifactId>
-  <version>1.0.0.Alpha2-SNAPSHOT</version>
+  <version>1.0.0.Alpha2</version>
   <packaging>pom</packaging>
   <name>Arquillian Daemon Aggregator and Build Parent</name>
   <url>http://www.arquillian.org</url>
@@ -35,6 +35,7 @@
     <connection>scm:git:git://github.com/arquillian/arquillian-daemon.git</connection>
     <developerConnection>scm:git:git@github.com:arquillian/arquillian-daemon.git</developerConnection>
     <url>https://github.com/arquillian/arquillian-daemon</url>
+    <tag>1.0.0.Alpha2</tag>
   </scm>
 
   <!-- Issues -->
