--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <!-- Parent -->
   <parent>
@@ -10,8 +11,8 @@
 
   <!-- Model Information -->
   <modelVersion>4.0.0</modelVersion>
-  
-    <!-- Artifact Information  -->
+
+  <!-- Artifact Information  -->
   <groupId>org.jboss.arquillian.daemon</groupId>
   <artifactId>arquillian-daemon-parent</artifactId>
   <version>1.0.0.Final-SNAPSHOT</version>
@@ -19,18 +20,24 @@
   <name>Arquillian Daemon Aggregator and Build Parent</name>
   <url>http://www.arquillian.org</url>
   <description>Arquillian Daemon Aggregator</description>
-  
-  <!-- Properties -->
-  <properties>
 
-    <!-- Versioning -->
+  <modules>
+    <module>build-resources</module>
+    <module>container-common</module>
+    <module>container-managed</module>
+    <module>container-remote</module>
+    <module>main</module>
+    <module>protocol-arquillian</module>
+    <module>protocol-wire</module>
+    <module>server</module>
+  </modules>
+
+  <properties>
     <version.org.jboss.arquillian.core>1.1.10.Final</version.org.jboss.arquillian.core>
     <version.junit_junit>4.12</version.junit_junit>
-    <version.org.apache.maven.plugins_maven-site-plugin>3.0-beta-3</version.org.apache.maven.plugins_maven-site-plugin>
-
+    <version.org.apache.maven.plugins_maven-site-plugin>3.6</version.org.apache.maven.plugins_maven-site-plugin>
   </properties>
-  
-  <!-- SCM -->
+
   <scm>
     <connection>scm:git:git://github.com/arquillian/arquillian-daemon.git</connection>
     <developerConnection>scm:git:git@github.com:arquillian/arquillian-daemon.git</developerConnection>
@@ -38,13 +45,11 @@
     <tag>HEAD</tag>
   </scm>
 
-  <!-- Issues -->
   <issueManagement>
     <system>jira</system>
     <url>https://issues.jboss.org/browse/ARQ</url>
   </issueManagement>
 
-  <!-- Licenses -->
   <licenses>
     <license>
       <name>Apache License, Version 2.0</name>
@@ -52,10 +57,8 @@
     </license>
   </licenses>
 
-  <!-- Plugin Configuration -->
   <build>
-  
-    <!-- Plugin Management -->
+
     <pluginManagement>
       <plugins>
 
@@ -85,15 +88,14 @@
             </dependency>
           </dependencies>
         </plugin>
-      
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
           <version>${version.org.apache.maven.plugins_maven-site-plugin}</version>
         </plugin>
-        
-       <!-- So m2e doesn't throw errors for features it doesn't support in the 
-        POM -->
+
+        <!-- So m2e doesn't throw errors for features it doesn't support in the POM -->
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
@@ -111,21 +113,20 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <execute />
+                    <execute/>
                   </action>
                 </pluginExecution>
               </pluginExecutions>
             </lifecycleMappingMetadata>
           </configuration>
         </plugin>
-        
+
       </plugins>
     </pluginManagement>
-  
+
     <plugins>
 
-      <!-- Release -->
-      <plugin> 
+      <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
           <autoVersionSubmodules>true</autoVersionSubmodules>
@@ -134,7 +135,6 @@
         </configuration>
       </plugin>
 
-      <!-- Compiler -->
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <inherited>true</inherited>
@@ -154,12 +154,11 @@
         </configuration>
       </plugin>
 
-      <!-- Surefire -->
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
-          <!-- Needed to not break Coburtura in Oracle JDKs -->
+          <!-- Needed to not break Cobertura in Oracle JDKs -->
           <argLine>-XX:-UseSplitVerifier</argLine>
           <trimStackTrace>false</trimStackTrace>
           <printSummary>true</printSummary>
@@ -170,10 +169,8 @@
         </configuration>
       </plugin>
 
-      <!-- Enforce Maven Environment -->
       <plugin>
-        <artifactId>maven-enforcer-plugin
-                      </artifactId>
+        <artifactId>maven-enforcer-plugin</artifactId>
         <executions>
           <execution>
             <id>enforce-maven-environment</id>
@@ -198,8 +195,7 @@
           </rules>
         </configuration>
       </plugin>
-      
-      <!-- m2e Config -->
+
       <plugin>
         <groupId>org.eclipse.m2e</groupId>
         <artifactId>lifecycle-mapping</artifactId>
@@ -207,8 +203,7 @@
 
     </plugins>
   </build>
-  
-  <!-- Dependency Management -->
+
   <dependencyManagement>
     <dependencies>
 
@@ -219,7 +214,7 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      
+
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -230,23 +225,10 @@
     </dependencies>
   </dependencyManagement>
 
-  <!-- Aggregate Modules -->
-  <modules>
-    <module>build-resources</module>
-    <module>container-common</module>
-    <module>container-managed</module>
-    <module>container-remote</module>
-    <module>main</module>
-    <module>protocol-arquillian</module>
-    <module>protocol-wire</module>
-    <module>server</module>
-  </modules>
-  
-  <!-- Reporting -->
+
   <reporting>
     <plugins>
 
-      <!-- Cobertura (Code Coverage) -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
@@ -259,17 +241,16 @@
         </configuration>
       </plugin>
 
-      <!-- FindBugs -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
-        <version>2.3.1</version>
+        <version>3.0.3</version>
         <configuration>
           <xmlOutput>true</xmlOutput>
           <findbugsXmlOutputDirectory>target/site</findbugsXmlOutputDirectory>
         </configuration>
       </plugin>
-    
+
       <!-- SHRINKWRAP-157 Workaround -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -295,7 +276,7 @@
     <repository>
       <id>jboss-public-repository</id>
       <name>JBoss Repository</name>
-      <url> https://repository.jboss.org/nexus/content/groups/public</url>
+      <url>https://repository.jboss.org/nexus/content/groups/public</url>
       <releases>
         <enabled>true</enabled>
         <updatePolicy>never</updatePolicy>
@@ -311,7 +292,7 @@
     <pluginRepository>
       <id>jboss-public-repository</id>
       <name>JBoss Repository</name>
-      <url> https://repository.jboss.org/nexus/content/groups/public</url>
+      <url>https://repository.jboss.org/nexus/content/groups/public</url>
       <releases>
         <enabled>true</enabled>
         <updatePolicy>never</updatePolicy>
@@ -321,6 +302,6 @@
         <updatePolicy>never</updatePolicy>
       </snapshots>
     </pluginRepository>
-  </pluginRepositories> 
+  </pluginRepositories>
 
 </project>
