--- a/container-managed/pom.xml
+++ b/container-managed/pom.xml
@@ -42,14 +42,22 @@
     <dependency>
       <groupId>org.jboss.arquillian.junit</groupId>
       <artifactId>arquillian-junit-container</artifactId>
-      <!-- <scope>test</scope>   -->
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>${version.assertj}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+  <properties>
+    <version.assertj>2.5.0</version.assertj>
+  </properties>
 
   <build>
     <plugins>
